--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,4 +2,5 @@
     <string name="app_name">hackIdc</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">Register</string>
+    <string name="facebook_app_id">1722659181352124</string>
 </resources>
