--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">hackIdc</string>
+    <string name="app_name">Setting</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">Register</string>
     <string name="facebook_app_id">1722659181352124</string>
