--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,9 @@
 <resources>
-    <string name="app_name">Setting</string>
+    <string name="app_name">Gymmy</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_register">Register</string>
     <string name="facebook_app_id">1722659181352124</string>
-
-    <!-- TODO: Remove or change this placeholder text -->
-    <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="title_activity_main">Gymmy</string>
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
 </resources>
